Added API for the Product Data & Made the home page more classic

--- a/src/CSS-Files/Home.css
+++ b/src/CSS-Files/Home.css
@@ -11,7 +11,12 @@
 }
 
 .product_container {
-    margin-top: -300px;
     position: relative;
     z-index: 10;
+    margin: -350px 40px 0px -20px;
 }
+.product_container > div {
+    margin-bottom: 20px;
+}
+
+
