--- a/src/CSS-Files/Header.css
+++ b/src/CSS-Files/Header.css
@@ -46,6 +46,10 @@
     padding: 10px;
     margin-top: 1px;
     border-radius: 0 5px 5px 0;
+    cursor: pointer;
+}
+.nav--searchicon:hover {
+    box-shadow: 0 0px 0px 0 white,0 0px 10px 0 white;
 }
 
 .nav--linkbar {
