Set up the local storage for every user's basket & made the address button functional

--- a/src/CSS-Files/Header.css
+++ b/src/CSS-Files/Header.css
@@ -12,6 +12,9 @@
     height: 60px;
     margin: 0 20px;
 }
+.nav--address--link {
+    text-decoration: none;
+}
 .nav--address {
     height: 60px;
     display: flex;
