--- a/src/CSS-Files/Home.css
+++ b/src/CSS-Files/Home.css
@@ -1,7 +1,7 @@
 .home{
     max-width: 1400px;
     margin: 0 auto;
-    padding-top: 60px;
+    /* padding-top: 60px; */
     padding-bottom: 100px;
 }
 
@@ -14,10 +14,17 @@
 .product_container {
     position: relative;
     z-index: 10;
-    margin: -350px 40px 0px -20px;
 }
 .product_container > div {
     margin-bottom: 20px;
 }
 
+
+.margin40px {
+    margin: 40px auto auto auto !important;
+}
+
+.margin-350px {
+    margin: -350px auto auto auto !important;
+}
 
