--- a/src/CSS-Files/Header.css
+++ b/src/CSS-Files/Header.css
@@ -1,11 +1,13 @@
 .header {
+    width: 100%;
     background-color: #131921;
     display: flex;
     align-items: center;
-    width: 100%;
+    /* max-width: 0 !important; */
     font-size: 0.8rem;
     z-index: 50;
     height: 60px;
+    object-fit: contain;
 }
 
 .bg {
@@ -20,7 +22,8 @@
 }
 
 .container {
-    margin: 0 !important;
+    margin: auto;
+    width: 100%;
 }
 
 .navbar-collapse {
@@ -189,4 +192,5 @@
     position: fixed;
     width: 100%;
     z-index: 100;
+    left: 0;
 }
